@@ -2,6 +2,9 @@
 
 	* INSTALL: add some words about multithread options and libraries.
 
+	* stlport/stl/_fstream.c: some code clean to reduse bogus compiler
+	warnings with -Wall.
+
 2005-08-18  Francois Dumont  <dums@stlport...>
 
 	* stlport/stl/_vector.h: Fix _M_erase range for movable types
@@ -14,7 +17,7 @@
 2005-08-17  Francois Dumont  <dums@stlport...>
 
 	* stlport/stl/_complex.h: Fix some floating point literals thanks
-	 Ulrickt Echkard report.
+	 Ulrich Eckhardt report.
 
 	* stlport/stl/_time_facets.c: Complete integration of the '#' MS extension
 	in the date/time format string, reported thanks to the recent locale time_get
@@ -25,7 +28,6 @@
 	* stlport/config/stl_msvc.h: Fix platform SDK compiler config, even latest
 	version that announce to be similar to .Net 2005 beta do not throw bad_alloc
 	from the new operator.
-
 
 	* stlport/cstdio, cstdlib: Replaced some _WIN64 checks by a
 	_STLP_USING_PLATFORM_SDK_COMPILER check.
